--- a/Chillenium2018/Chillenium2018.csproj
+++ b/Chillenium2018/Chillenium2018.csproj
@@ -309,6 +309,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Combat\CharController.cs" />
     <Compile Include="Assets\Scripts\Combat\Entity.cs" />
+    <Compile Include="Assets\Scripts\Combat\PlayerChar.cs" />
     <Compile Include="Assets\Scripts\Combat\ProjectileHandler.cs" />
     <Compile Include="Assets\Scripts\Combat\Shoot.cs" />
     <Compile Include="Assets\Scripts\MenuButtons.cs" />
