--- a/Chillenium2018/Assembly-CSharp.csproj
+++ b/Chillenium2018/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\Combat\PlayerChar.cs" />
      <Compile Include="Assets\Scripts\Combat\ProjectileHandler.cs" />
      <Compile Include="Assets\Scripts\Combat\Shoot.cs" />
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\MenuButtons.cs" />
      <Compile Include="Assets\Scripts\StateManager.cs" />
  <Reference Include="UnityEditor.StandardEvents">
