--- a/Chillenium2018/Assembly-CSharp.csproj
+++ b/Chillenium2018/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\AnimationBehaviors\PlaySound.cs" />
      <Compile Include="Assets\Scripts\Combat\CharController.cs" />
      <Compile Include="Assets\Scripts\Combat\Entity.cs" />
      <Compile Include="Assets\Scripts\Combat\PlayerChar.cs" />
