--- a/Chillenium2018/Assembly-CSharp.csproj
+++ b/Chillenium2018/Assembly-CSharp.csproj
@@ -287,6 +287,9 @@
  <Reference Include="UnityEngine.StandardEvents">
  <HintPath>C:/Users/Taylor Hobbs/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.13/UnityEngine.StandardEvents.dll</HintPath>
  </Reference>
+ <Reference Include="XInputDotNetPure">
+ <HintPath>C:/Users/Taylor Hobbs/Desktop/Chillenium2018/Chillenium2018/Assets/XInputDotNetPure.dll</HintPath>
+ </Reference>
  <Reference Include="mscorlib">
  <HintPath>C:/Program Files/Unity/Editor/Data/MonoBleedingEdge/lib/mono/unity/mscorlib.dll</HintPath>
  </Reference>
