--- a/Chillenium2018/Assembly-CSharp.csproj
+++ b/Chillenium2018/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
      <Compile Include="Assets\Scripts\Combat\PlayerChar.cs" />
      <Compile Include="Assets\Scripts\Combat\ProjectileHandler.cs" />
      <Compile Include="Assets\Scripts\Combat\Shoot.cs" />
+     <Compile Include="Assets\Scripts\Combat\SineWaveBullet.cs" />
      <Compile Include="Assets\Scripts\EZ Camera Shake\Demo\Sample Scripts\ShakeByDistance.cs" />
      <Compile Include="Assets\Scripts\EZ Camera Shake\Demo\Sample Scripts\ShakeOnKeyPress.cs" />
      <Compile Include="Assets\Scripts\EZ Camera Shake\Demo\Sample Scripts\ShakeOnTrigger.cs" />
@@ -281,14 +282,14 @@
  <Reference Include="UnityEngine.SpatialTracking">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
  </Reference>
+ <Reference Include="XInputDotNetPure">
+ <HintPath>C:/Users/Taylor Hobbs/Desktop/Chillenium2018/Chillenium2018/Assets/XInputDotNetPure.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.Analytics">
  <HintPath>C:/Users/Taylor Hobbs/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.StandardEvents">
  <HintPath>C:/Users/Taylor Hobbs/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.13/UnityEngine.StandardEvents.dll</HintPath>
- </Reference>
- <Reference Include="XInputDotNetPure">
- <HintPath>C:/Users/Taylor Hobbs/Desktop/Chillenium2018/Chillenium2018/Assets/XInputDotNetPure.dll</HintPath>
  </Reference>
  <Reference Include="mscorlib">
  <HintPath>C:/Program Files/Unity/Editor/Data/MonoBleedingEdge/lib/mono/unity/mscorlib.dll</HintPath>
